2012-11-27  Istiaque Ahmed  <lazyboy@chromium.org>

        freeV8NPObject: Skip trying to remove object from per context data's ObjectMap if the object does not exist in the map.
        https://bugs.webkit.org/show_bug.cgi?id=103356

        Reviewed by Adam Barth.

        Before introducing per context data, it used to be the case that we would ignore removing v8 object
        from context data's map if we couldn't find it. With perContextData change, this turned into an ASSERT
        instead and we had crash reports.
        Related crbug.com/154462.

        Test: platform/chromium/plugins/release-frame-content-window.html

        * bindings/v8/NPV8Object.cpp:
        (WebCore::freeV8NPObject):

2012-11-27  Marja Hölttä  <marja@chromium.org>

        Add callbacks to the FrameLoaderClient when a resource is requested
        https://bugs.webkit.org/show_bug.cgi?id=92761

        Reviewed by Adam Barth.

        In Chromium, when an extension script cancels a network
        request (which happens out of process), we'd like to
        notify content scripts running on the current page about
        which elements failed to load because the requests were
        cancelled (as opposed to e.g. the network request just
        didn't work). Since the resource request itself does not
        carry any information what DOM element is was made for,
        currently a content script has to search the DOM tree and
        guess which requests will be cancelled by its counter
        part. By adding these callbacks, the embedder can make
        this connection explictly.

        Test: platform/chromium/fast/loader/resource-request-callbacks.html

        * loader/FrameLoaderClient.h:
        (WebCore):
        (WebCore::FrameLoaderClient::dispatchWillRequestResource):
        (FrameLoaderClient):
        * loader/cache/CachedResourceLoader.cpp:
        (WebCore::CachedResourceLoader::requestResource):

2012-11-27  Dean Jackson  <dino@apple.com>
